[package]
name = "kse-launcher"
version = "2.0.0"
authors = ["Kai Kramer <kaikramer@users.noreply.github.com>"]
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
windows-sys = { version = ">=0.59, <=0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
